--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "ZooManagementSystem/test",
-        "ZooManagementSystem/src"
+        "ZooManagementSystem/src",
+        "ZooManagementSystem"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
