--- a/ZooManagementSystem/ZMS/pom.xml
+++ b/ZooManagementSystem/ZMS/pom.xml
@@ -53,6 +53,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    
+    <dependency>
+    <groupId>com.github.librepdf</groupId>
+    <artifactId>openpdf</artifactId>
+    <version>1.3.30</version>
+</dependency>
 </dependencies>
 
 
