--- a/ZooManagementSystem/Dockerfile
+++ b/ZooManagementSystem/Dockerfile
@@ -1,16 +1,10 @@
-FROM eclipse-temurin:17-jdk
+FROM maven:3.9.6-eclipse-temurin-17
 
 WORKDIR /app
 
 COPY . /app
 
-
-RUN chmod +x mvnw
-
-
-RUN ls -la && ./mvnw -v
-
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 EXPOSE 8080
 
