--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 out/
 .fake
 **/application.properties
+src/main/resources/application.properties
+ZooManagementSystem/src/main/resources/application.properties
